js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.5.kt
class MyClass {
    companion object {
        val intProperty = 2
        val pairProperty = -1 to 2
        val funcProperty = { 2 }
    }
}
